@@ -2,6 +2,18 @@
 # arch-tag: automatic-ChangeLog--jdavid@itaapy.com--public/itools--main--0.12
 #
 
+2005-11-19 18:00:25 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-41
+
+    Summary:
+      scripts.icms, now the port can be specified in the config file
+    Revision:
+      itools--main--0.12--patch-41
+
+
+    modified files:
+     Changelog scripts/icms.py
+
+
 2005-11-19 17:46:47 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-40
 
     Summary:
